Fix for BZ 758976 - prevent promo code label from getting shifted over

--- a/site/app/stylesheets/partials/_forms.scss
+++ b/site/app/stylesheets/partials/_forms.scss
@@ -86,6 +86,12 @@ fieldset.confirm {
   }
 }
 
+fieldset.promo {
+  label {
+    margin: 0;
+  }
+}
+
 input.correct {
   border: 2px solid #8FDB45;
   margin: .15em;
